documentacion/obtenida/ARINC 429/driver and software/PC708-1/API/P71W32NET.CS


        [DllImport("P71W32.DLL", EntryPoint = "_PC708_CardClose@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_CardClose(UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_CardOpen@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 PC708_CardOpen(UInt32 memval, UInt16 ioval, UInt16 irqval, UInt16 drqval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_CardReset@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void PC708_CardReset(UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_CardStart@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_CardStart(UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_CardStop@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_CardStop(UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_IntInstall@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_IntInstall(IntPtr hevent, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_IntRd@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 PC708_IntRd(ref UInt16 typevalval, ref UInt16 infoval, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_IntStatus@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_IntStatus(UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_IntUninstall@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_IntUninstall(UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_RcvConfig@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_RcvConfig(UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_RcvConfigEx@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_RcvConfigEx(UInt32 rtconfigval, UInt16 intfreq, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_RcvMonBlkRd@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 PC708_RcvMonBlkRd(ref UInt16 buf, UInt32 bufcount, ref UInt32 blkcnt, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_RcvMonBlkRdEx@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 PC708_RcvMonBlkRdEx(ref UInt16 buf, UInt32 bufcount, UInt32 maxblkcnt, ref UInt32 blkcnt, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_RcvMonRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 PC708_RcvMonRd(ref UInt16 buf, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_RcvMonRdEx@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 PC708_RcvMonRdEx(ref UInt16 buf, UInt16 index, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_RcvMonStatus@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_RcvMonStatus(UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_RcvRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void PC708_RcvRd(ref UInt16 buf, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_XmtConfig@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_XmtConfig(UInt16 framefreq, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_XmtConfigEx@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_XmtConfigEx(UInt16 framefreq, UInt16 intfreq, UInt16 framecount, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_XmtConfigExx@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_XmtConfigExx(UInt32 xmtconfigval, UInt16 framefreq, UInt16 intfreq, UInt16 framecount, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_XmtRd@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void PC708_XmtRd(ref UInt16 buf, UInt16 framenum, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_XmtStatus@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_XmtStatus(UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_XmtWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void PC708_XmtWr(ref UInt16 buf, UInt16 framenum, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_FieldGetAngle@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 PC708_FieldGetAngle(ref UInt16 buf);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_FieldGetAngleFl@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Single PC708_FieldGetAngleFl(ref UInt16 buf);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_FieldGetControlAccept@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 PC708_FieldGetControlAccept(ref UInt16 buf);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_FieldGetData@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 PC708_FieldGetData(Int32 binnum, ref UInt16 buf);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_FieldGetDataAccept@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 PC708_FieldGetDataAccept(ref UInt16 buf);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_FieldGetFaults@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 PC708_FieldGetFaults(ref UInt16 buf);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_FieldGetGain@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_FieldGetGain(ref UInt16 buf);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_FieldGetLabel@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 PC708_FieldGetLabel(ref UInt16 buf);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_FieldGetMode@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 PC708_FieldGetMode(ref UInt16 buf);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_FieldGetRange@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_FieldGetRange(ref UInt16 buf);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_FieldGetTilt@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 PC708_FieldGetTilt(ref UInt16 buf);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_FieldGetTiltFl@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Single PC708_FieldGetTiltFl(ref UInt16 buf);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_FieldPutAngle@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 PC708_FieldPutAngle(UInt16 value, ref UInt16 buf);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_FieldPutAngleFl@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Single PC708_FieldPutAngleFl(Single angle, ref UInt16 buf);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_FieldPutControlAccept@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 PC708_FieldPutControlAccept(UInt16 value, ref UInt16 buf);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_FieldPutData@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 PC708_FieldPutData(UInt16 value, Int32 binnum, ref UInt16 buf);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_FieldPutDataAccept@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 PC708_FieldPutDataAccept(UInt16 value, ref UInt16 buf);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_FieldPutFaults@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 PC708_FieldPutFaults(UInt16 value, ref UInt16 buf);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_FieldPutGain@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_FieldPutGain(Int32 gain, ref UInt16 buf);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_FieldPutLabel@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 PC708_FieldPutLabel(UInt16 value, ref UInt16 buf);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_FieldPutMode@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 PC708_FieldPutMode(UInt16 value, ref UInt16 buf);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_FieldPutRange@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_FieldPutRange(Int32 range, ref UInt16 buf);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_FieldPutTilt@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 PC708_FieldPutTilt(UInt16 value, ref UInt16 buf);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_FieldPutTiltFl@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Single PC708_FieldPutTiltFl(Single tilt, ref UInt16 buf);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_AddrDSP@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 PC708_AddrDSP(UInt32 addr);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_AddrHost@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 PC708_AddrHost(UInt32 addr);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_BCConfig@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_BCConfig(UInt32 configval, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_BCConfigEx@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_BCConfigEx(UInt32 configval, UInt16 count, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_BCConfigMsg@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 PC708_BCConfigMsg(UInt32 configval, UInt32 msgaddr, UInt32 handleval);
